<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:gravity="center|fill_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TourScreen" >

    <Button
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="169dp"
        android:background="#32CD32"
        android:gravity="center_vertical|center_horizontal|top"
        android:padding="15dp"
        android:paddingLeft="50dp"
        android:paddingRight="45dp"
        android:paddingTop="15dp"
        android:text="@string/mapButtonString"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="139dp"
        android:layout_toLeftOf="@+id/textView1"
        android:gravity="bottom"
        android:text="@string/dev2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/mapButton"
        android:layout_marginRight="89dp"
        android:gravity="bottom"
        android:text="@string/dev1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/mapButton"
        android:layout_marginLeft="107dp"
        android:gravity="bottom"
        android:text="@string/dev3"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:gravity="center|top"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginLeft="62dp"
        android:layout_toRightOf="@+id/textView4"
        android:gravity="bottom|right"
        android:text="@string/dev4"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp" />

</RelativeLayout>